Fix word wrap / page width
There was an issue with long URLs breaking word wrap and the solution at
the time was to set a very wide min-width. This is not ideal for all
viewports, including printing, so we are moving to a word-wrap rule.

Because of flex box there is an additional improvement necessary, which
is that flex-boxes will specify a default min width of whatever the
longest element (before word breaks).  By specifying a smaller min-width
we prevent that auto calculation.

https://stackoverflow.com/questions/36150458/flex-item-overflows-container-due-to-long-word-even-after-using-word-wrap/36150638

Issue #120

--- a/roles/mediawiki/files/Common.css
+++ b/roles/mediawiki/files/Common.css
@@ -32,8 +32,21 @@
  * the left menu rather than creating a scrollbar at the bottom.
  */
 body {
-  min-width:1400px;
+ overflow-wrap: break-word;
 }
+
+.torque-main-content {
+  min-width: 750px;
+}
+
+/* This line is because there is no way to identify the "snapshot" vs "body" of a
+ * proposal right now, so we are using nth-of-type until we modify the template to
+ * use classes.
+ */
+.torque-main-content>div:nth-of-type(2) {
+  min-width: 300px;
+}
+
 @media print {
   .firstHeading {
     display:none;
